@@ -1,14 +1,6 @@
 /*******************************************************************************
- * Copyright (C) 2005 - 2014 TIBCO Software Inc. All rights reserved.
- * http://www.jaspersoft.com.
- * 
- * Unless you have purchased  a commercial license agreement from Jaspersoft,
- * the following license terms  apply:
- * 
- * This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * Copyright (C) 2010 - 2016. TIBCO Software Inc. 
+ * All Rights Reserved. Confidential & Proprietary.
  ******************************************************************************/
 package net.sf.jasperreports.eclipse.classpath;
 
@@ -16,6 +8,9 @@ import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
@@ -23,34 +18,52 @@ import java.net.URLClassLoader;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.Vector;
+import java.util.jar.JarFile;
 
-import net.sf.jasperreports.eclipse.classpath.container.JRClasspathContainer;
-import net.sf.jasperreports.eclipse.util.FileExtension;
-
+import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IFolder;
 import org.eclipse.core.resources.IPathVariableManager;
 import org.eclipse.core.resources.IProject;
+import org.eclipse.core.resources.IResourceChangeEvent;
+import org.eclipse.core.resources.IResourceChangeListener;
 import org.eclipse.core.resources.IResourceDelta;
 import org.eclipse.core.resources.IWorkspaceRoot;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.jdt.core.ElementChangedEvent;
+import org.eclipse.jdt.core.IClassFile;
 import org.eclipse.jdt.core.IClasspathContainer;
 import org.eclipse.jdt.core.IClasspathEntry;
 import org.eclipse.jdt.core.IElementChangedListener;
+import org.eclipse.jdt.core.IJavaElement;
 import org.eclipse.jdt.core.IJavaElementDelta;
 import org.eclipse.jdt.core.IJavaProject;
 import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.JavaModelException;
 import org.eclipse.jdt.launching.JavaRuntime;
 
+import net.sf.jasperreports.eclipse.classpath.container.JRClasspathContainer;
+import net.sf.jasperreports.eclipse.util.FileExtension;
+import net.sf.jasperreports.eclipse.util.Misc;
+
 public class JavaProjectClassLoader extends ClassLoader {
-	private static Map<IJavaProject, JavaProjectClassLoader> map = new HashMap<IJavaProject, JavaProjectClassLoader>();
+
+	public static final String JAVA_PROJECT_CLASS_LOADER_KEY = "javaProjectClassLoader"; //$NON-NLS-1$
+	private static final String PROTOCOL_PREFIX = "file:///"; //$NON-NLS-1$
+	private static final String FILE_SCHEME = "file"; //$NON-NLS-1$
+	private boolean calcURLS = false;
+	private static Map<IJavaProject, JavaProjectClassLoader> map = new HashMap<>();
+
+	private URLClassLoader curlLoader;
+	private IJavaProject javaProject;
+	private IElementChangedListener listener;
+	private PropertyChangeSupport events;
 
 	public static ClassLoader instance(IJavaProject project) {
 		return instance(project, null);
@@ -62,13 +75,34 @@ public class JavaProjectClassLoader extends ClassLoader {
 			cl = new JavaProjectClassLoader(project, classLoader);
 			map.put(project, cl);
 		}
-
 		return cl;
 	}
-
-	private IJavaProject javaProject;
-	private IElementChangedListener listener;
-
+	
+	/**
+	 * Triggers the Java project classpath re-load via the proper event.
+	 * 
+	 * @param proj the Java project 
+	 * @return <code>true</code> if the reload has been triggered, <code>false</code> otherwise
+	 */
+	public static boolean forceClassPathReload(IJavaProject proj) {
+		JavaProjectClassLoader jpcl = map.get(proj);
+		if(jpcl!=null && jpcl.events!=null) {
+			jpcl.events.firePropertyChange("classpath", false, true);
+			return true;
+		}
+		return false;
+	}
+	
+	/**
+	 * Checks if the specified project is suitable for a possible classpath re-load.
+	 * 
+	 * @param proj the Java project to look for
+	 * @return <code>true</code> if the classpath project can be reloaded,<code>false</code> otherwise
+	 */
+	public static boolean canReloadProjectClassPath(IJavaProject proj) {
+		return map.get(proj)!=null;
+	}
+	
 	private JavaProjectClassLoader(IJavaProject project) {
 		super();
 		init(project);
@@ -84,43 +118,169 @@ public class JavaProjectClassLoader extends ClassLoader {
 			throw new IllegalArgumentException("Invalid javaProject");
 		this.javaProject = project;
 		getURLClassloader();
+
+		try {
+			final IPath prjPath = javaProject.getProject().getFullPath();
+			final IPath prjOut = javaProject.getOutputLocation();
+			IResourceChangeListener plistener = new IResourceChangeListener() {
+
+				private boolean checkInPaths(IResourceDelta rd) {
+					IPath fp = rd.getFullPath();
+					if (fp != null) {
+						if (prjOut.isPrefixOf(fp)) {
+							String rpath = rd.getProjectRelativePath().lastSegment();
+							if (rpath.endsWith(".class") || rpath.endsWith(".properties")) {
+								clean(curlLoader);
+								curlLoader = null;
+								getURLClassloader();
+								if (events != null) {
+									// makes sense to trigger the classloader re-build because
+									// changes to the classes or property files might indicate
+									// new extensions or modified Java code
+									System.out.println("Invoking classpath reload");
+									events.firePropertyChange("classpath", false, true);
+								}
+								return true;
+							}
+						}
+						if (fp.matchingFirstSegments(prjOut) <= 0)
+							return true;
+					}
+					return false;
+				}
+
+				private void checkResource(IResourceDelta[] children) {
+					for (IResourceDelta rd : children) {
+						if (!prjPath.isPrefixOf(rd.getFullPath()))
+							return;
+						if (!Misc.isNullOrEmpty(rd.getAffectedChildren()))
+							checkResource(rd.getAffectedChildren());
+						else if (checkInPaths(rd))
+							return;
+					}
+				}
+
+				public void resourceChanged(IResourceChangeEvent event) {
+					final IResourceDelta delta = event.getDelta();
+					if (delta != null)
+						checkResource(delta.getAffectedChildren());
+				}
+			};
+			ResourcesPlugin.getWorkspace().addResourceChangeListener(plistener, IResourceChangeEvent.POST_CHANGE);
+		} catch (JavaModelException e) {
+			e.printStackTrace();
+		}
+
 		listener = new IElementChangedListener() {
 
 			public void elementChanged(final ElementChangedEvent event) {
-				if (ignoreClasspathChanges(event))
+				if (!isClasspathReloadNeeded(event.getDelta()))
 					return;
-				System.out.println("CLASSPATH CHANGED:" + event);
 				// FIXME should release this classloader
 				// what happend with current objects? we have 1 loader per
 				// project, maybe se can filter some events? to have less
 				// updates
-				curlLoader = null;
+				clean(curlLoader);
+				curlLoader=null;
 				getURLClassloader();
-				if (events != null)
+				if (events != null && !isToIgnore(event.getDelta().getAffectedChildren())) {
+					System.out.println("Invoking classpath reload");
 					events.firePropertyChange("classpath", false, true);
+				}
+			}
+
+			private boolean isClasspathReloadNeeded(IJavaElementDelta delta) {
+				switch (delta.getElement().getElementType()) {
+				case IJavaElement.JAVA_MODEL:
+					// It corresponds to the workspace representation, we need to investigate
+					// further its children
+					for (IJavaElementDelta c : delta.getAffectedChildren())
+						if (isClasspathReloadNeeded(c))
+							return true;
+					break;
+				case IJavaElement.JAVA_PROJECT:
+					// It corresponds to the project structure. We might detect a direct classpath
+					// change
+					if (delta.getKind() == IJavaElementDelta.REMOVED) {
+						map.remove(JavaProjectClassLoader.this.javaProject);
+						JavaCore.removeElementChangedListener(listener);
+						return true;
+					}
+					if (0 != (delta.getFlags()
+							& (IJavaElementDelta.F_CLASSPATH_CHANGED | IJavaElementDelta.F_RESOLVED_CLASSPATH_CHANGED
+									| IJavaElementDelta.F_CLOSED | IJavaElementDelta.F_REMOVED_FROM_CLASSPATH))) {
+						return true;
+					}
+					// Or we might need to investigate further among its children
+					else {
+						for (IJavaElementDelta c : delta.getAffectedChildren())
+							if (isClasspathReloadNeeded(c))
+								return true;
+					}
+				case IJavaElement.PACKAGE_FRAGMENT_ROOT:
+					// It corresponds to an underlying resource which is either a folder, JAR, or
+					// zip.
+					if ((delta.getFlags()
+							& (IJavaElementDelta.F_CONTENT | IJavaElementDelta.F_ARCHIVE_CONTENT_CHANGED)) != 0) {
+						if (isElementNameAllowed(delta.getElement().getElementName())) {
+							return true;
+						}
+					} else {
+						for (IJavaElementDelta c : delta.getAffectedChildren()) {
+							if (isClasspathReloadNeeded(c)) {
+								return true;
+							}
+						}
+					}
+				case IJavaElement.PACKAGE_FRAGMENT:
+					// A package fragment is a portion of the workspace corresponding to an entire
+					// package, or to a portion thereof.
+					for (IJavaElementDelta c : delta.getAffectedChildren()) {
+						if (c.getElement() instanceof IClassFile
+								&& ((c.getFlags() & IJavaElementDelta.F_CONTENT) != 0)) {
+							if (isElementNameAllowed(c.getElement().getElementName())) {
+								return true;
+							}
+						}
+					}
+				default:
+					break;
+				}
+				return false;
+			}
+
+			private boolean isToIgnore(IJavaElementDelta[] children) {
+				if (children == null || children.length == 0)
+					return true;
+				for (IJavaElementDelta jdelta : children) {
+					IResourceDelta[] rd = jdelta.getResourceDeltas();
+					if (rd == null || rd.length == 0)
+						if (!isToIgnore(jdelta.getAffectedChildren()))
+							return false;
+					if (rd != null)
+						for (IResourceDelta delta : rd)
+							if (delta.getResource() instanceof IFile) {
+								String fe = delta.getFullPath().getFileExtension();
+								if (!(fe.equals( FileExtension.JASPER) || fe.equals( FileExtension.JRXML) || fe.equals( FileExtension.JRTX)
+										|| FileExtension.isImage(delta.getFullPath().toOSString())))
+									return false;
+							} else
+								return false;
+				}
+				return true;
+			}
+
+			/*
+			 * Checks if the element might be interesting for a possible classpath reload
+			 * event.
+			 */
+			private boolean isElementNameAllowed(String elName) {
+				return elName != null
+						&& (elName.endsWith(".jar") || elName.endsWith(".class") || elName.endsWith(".properties"));
 			}
 		};
 		JavaCore.addElementChangedListener(listener, ElementChangedEvent.POST_CHANGE);
 	}
-
-	private boolean ignoreClasspathChanges(ElementChangedEvent event) {
-		if (event.getDelta() == null && event.getDelta().getChangedChildren() == null)
-			return true;
-		for (IJavaElementDelta delta : event.getDelta().getChangedChildren()) {
-			if (delta.getResourceDeltas() == null)
-				return false;
-			for (IResourceDelta rd : delta.getResourceDeltas()) {
-				if (rd.getFullPath() == null)
-					continue;
-				String path = rd.getFullPath().getFileExtension();
-				if (path != null && !(path.equalsIgnoreCase(FileExtension.JRXML) || path.equalsIgnoreCase(FileExtension.JASPER)))
-					return false;
-			}
-		}
-		return true;
-	}
-
-	private PropertyChangeSupport events;
 
 	public void addClasspathListener(PropertyChangeListener l) {
 		if (events == null)
@@ -138,135 +298,67 @@ public class JavaProjectClassLoader extends ClassLoader {
 	protected URL findResource(String name) {
 		if (name.endsWith(".groovy"))
 			return null;
-		// System.out.println(name);
+		if (name.endsWith("commons-logging.properties"))
+			return null;
+//		System.out.println(">>> RESOURCE >>> " + name);
 		if (curlLoader != null)
 			return curlLoader.getResource(name);
 		return null;
-		// URL url = null;
-		// try {
-		// url = getURLClassloader().getResource(name);
-		// if (url == null) {
-		// IPath path = new Path(name);
-		// String resourceName = path.lastSegment();
-		// path =
-		// path.removeFileExtension().removeLastSegments(1).makeRelative();
-		//
-		// IJavaElement element = javaProject.findElement(path);
-		// if (element != null) {
-		// if (element instanceof IPackageFragment) {
-		// Object[] children = ((IPackageFragment)
-		// element).getNonJavaResources();
-		// if (children != null) {
-		// for (Object child : children) {
-		// if (child instanceof IResource) {
-		// IResource res = (IResource) child;
-		// if (resourceName.equals(res.getName()))
-		// return res.getLocationURI().toURL();
-		// } else if (child instanceof JarEntryFile) {
-		// JarEntryFile jef = (JarEntryFile) child;
-		// if (resourceName.equals(jef.getName()))
-		// return new URL("jar:file:" + element.getPath() + "!" +
-		// jef.getFullPath());
-		// }
-		// }
-		// }
-		// } else {
-		// IResource resource = javaProject.getResource();
-		// if (resource != null) {
-		// File file =
-		// resource.getLocation().append(element.getPath().makeRelativeTo(resource.getFullPath())).append(resourceName).toFile();
-		// if (file.exists())
-		// return file.toURI().toURL();
-		// }
-		// }
-		// }
-		// }
-		// if (url != null)
-		// return url;
-		// } catch (MalformedURLException e) {
-		// e.printStackTrace();
-		// } catch (JavaModelException e) {
-		// e.printStackTrace();
-		// } catch (CoreException e) {
-		// e.printStackTrace();
-		// }
-		// return url;
 	}
 
 	@Override
 	protected Enumeration<URL> findResources(String name) throws IOException {
+		if (name.endsWith("commons-logging.properties"))
+			return null;
 		if (curlLoader != null)
 			return curlLoader.getResources(name);
-		// try {
-		// return getURLClassloader().getResources(name);
-		// if (url == null) {
-		// Set<URL> urls = new HashSet<URL>();
-		// IPath path = new Path(name);
-		// String resourceName = path.lastSegment();
-		// path =
-		// path.removeFileExtension().removeLastSegments(1).makeRelative();
-		//
-		// IJavaElement element = javaProject.findElement(path);
-		// if (element != null) {
-		// IResource resource = javaProject.getResource();
-		// File file =
-		// resource.getLocation().append(element.getPath().makeRelativeTo(resource.getFullPath())).append(resourceName).toFile();
-		// if (file.exists())
-		// urls.add(file.toURI().toURL());
-		//
-		// Object[] children = ((IPackageFragment)
-		// element).getNonJavaResources();
-		// if (children != null) {
-		// for (Object child : children) {
-		// if (child instanceof IResource) {
-		// IResource res = (IResource) child;
-		// if (resourceName.equals(res.getName())) {
-		// urls.add(res.getLocationURI().toURL());
-		// }
-		// } else if (child instanceof JarEntryFile) {
-		// JarEntryFile jef = (JarEntryFile) child;
-		// if (resourceName.equals(jef.getName())) {
-		// String jarpath = "jar:file:" + element.getPath() + "!" +
-		// jef.getFullPath();
-		// urls.add(new URL(jarpath));
-		// }
-		// }
-		// }
-		// }
-		// }
-		// final Iterator<URL> i = urls.iterator();
-		// return new Enumeration<URL>() {
-		//
-		// public boolean hasMoreElements() {
-		// return i.hasNext();
-		// }
-		//
-		// public URL nextElement() {
-		// return i.next();
-		// }
-		// };
-		// }
-		// if (url != null)
-		// return url;
-		// } catch (MalformedURLException e) {
-		// e.printStackTrace();
-		// } catch (JavaModelException e) {
-		// e.printStackTrace();
-		// } catch (CoreException e) {
-		// e.printStackTrace();
-		// }
 		return null;
 	}
 
-	private static final String PROTOCOL_PREFIX = "file:///";
+	@Override
+	public URL getResource(String name) {
+		if (name.endsWith("commons-logging.properties"))
+			return null;
+		return super.getResource(name);
+	}
+
+	@Override
+	public Enumeration<URL> getResources(String name) throws IOException {
+		if (name.endsWith("commons-logging.properties"))
+			return null;
+		return super.getResources(name);
+	}
+
+	@Override
+	public InputStream getResourceAsStream(String name) {
+		if (name.endsWith("commons-logging.properties"))
+			return null;
+		return super.getResourceAsStream(name);
+	}
 
 	@Override
 	protected Class findClass(String className) throws ClassNotFoundException {
-		if (ClassLoaderUtil.packages.contains(className))
-			throw new ClassNotFoundException(className);
-		if (className.endsWith("GroovyEvaluator"))
-			throw new ClassNotFoundException(className);
-		// System.out.println(className);
+		if (!"net.sf.jasperreports.compilers.GroovyEvaluator".equals(className)) {
+			// The code commented would help in excluding other non-existing
+			// classes
+			// that are tried to be loaded. Root cause seems to be Spring
+			// mechanism
+			// of looking for BeanInfo classes
+			// if((className.endsWith("Customizer") ||
+			// className.endsWith("BeanInfo")) &&
+			// (className.startsWith("com.jaspersoft") ||
+			// className.startsWith("net.sf.jasperreports"))){
+			// throw new ClassNotFoundException(className);
+			// }
+			for(String suffix : ClassLoaderUtil.EXCLUDE_SUFFIXES) {
+				if(className.endsWith(suffix)) {
+					throw new ClassNotFoundException(className);
+				}
+			}
+			if (ClassLoaderUtil.packages.contains(className))
+				throw new ClassNotFoundException(className);
+		}
+//		System.out.println(">>> CLASS >>> " + className);
 		if (curlLoader != null)
 			return curlLoader.loadClass(className);
 		throw new ClassNotFoundException(className);
@@ -281,38 +373,13 @@ public class JavaProjectClassLoader extends ClassLoader {
 		return new URL(PROTOCOL_PREFIX + classpath);
 	}
 
-	private static final String FILE_SCHEME = "file";
-	private static boolean calcURLS = false;
-
 	private ClassLoader getURLClassloader() {
 		if (curlLoader == null) {
 			try {
 				if (calcURLS)
 					return getParent();
 				calcURLS = true;
-				JRClasspathContainer jrcnt = (JRClasspathContainer) JavaCore.getClasspathContainer(JRClasspathContainer.ID, javaProject);
-				List<String> jrcntpaths = null;
-				if (jrcnt != null) {
-					IClasspathEntry[] ces = jrcnt.getAllClasspathEntries();
-					if (ces != null && ces.length > 0) {
-						jrcntpaths = new ArrayList<String>();
-						for (IClasspathEntry en : ces)
-							jrcntpaths.add(en.getPath().toOSString());
-					}
-				}
-				String[] classPaths = JavaRuntime.computeDefaultRuntimeClassPath(javaProject);
-				Set<URL> urls = new HashSet<URL>();
-				for (int i = 0; i < classPaths.length; i++)
-					try {
-						if (jrcntpaths != null && jrcntpaths.contains(classPaths[i]))
-							continue;
-						urls.add(computeForURLClassLoader(classPaths[i]));
-					} catch (MalformedURLException e) {
-					}
-
-				IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
-				IClasspathEntry[] entries = javaProject.getResolvedClasspath(true);
-				resolveClasspathEntries(urls, root, entries);
+				Set<URL> urls = buildURLs(javaProject);
 
 				getURLClassloader(urls.toArray(new URL[urls.size()]));
 				calcURLS = false;
@@ -325,7 +392,36 @@ public class JavaProjectClassLoader extends ClassLoader {
 		return curlLoader;
 	}
 
-	private void resolveClasspathEntries(Set<URL> urls, IWorkspaceRoot root, IClasspathEntry[] entries) throws JavaModelException {
+	public static Set<URL> buildURLs(IJavaProject javaProject) throws CoreException {
+		JRClasspathContainer jrcnt = (JRClasspathContainer) JavaCore.getClasspathContainer(JRClasspathContainer.ID,
+				javaProject);
+		List<String> jrcntpaths = null;
+		if (jrcnt != null) {
+			IClasspathEntry[] ces = jrcnt.getAllClasspathEntries();
+			if (ces != null && ces.length > 0) {
+				jrcntpaths = new ArrayList<>();
+				for (IClasspathEntry en : ces)
+					jrcntpaths.add(en.getPath().toOSString());
+			}
+		}
+		String[] classPaths = JavaRuntime.computeDefaultRuntimeClassPath(javaProject);
+		Set<URL> urls = new LinkedHashSet<>();
+		for (int i = 0; i < classPaths.length; i++)
+			try {
+				if (jrcntpaths != null && jrcntpaths.contains(classPaths[i]))
+					continue;
+				urls.add(computeForURLClassLoader(classPaths[i]));
+			} catch (MalformedURLException e) {
+			}
+
+		IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
+		IClasspathEntry[] entries = javaProject.getResolvedClasspath(true);
+		resolveClasspathEntries(urls, root, entries, javaProject);
+		return urls;
+	}
+
+	public static void resolveClasspathEntries(Set<URL> urls, IWorkspaceRoot root, IClasspathEntry[] entries,
+			IJavaProject javaProject) throws JavaModelException {
 		for (int i = 0; i < entries.length; i++) {
 			IClasspathEntry entry = entries[i];
 			if (entry.getEntryKind() == IClasspathEntry.CPE_SOURCE) {
@@ -333,7 +429,7 @@ public class JavaProjectClassLoader extends ClassLoader {
 				if (path.segmentCount() >= 2) {
 					IFolder sourceFolder = root.getFolder(path);
 					try {
-						urls.add(new URL("file:///" + sourceFolder.getRawLocation().toOSString() + "/"));
+						urls.add(sourceFolder.getRawLocation().toFile().toURI().toURL());
 					} catch (MalformedURLException e) {
 					}
 				}
@@ -346,7 +442,7 @@ public class JavaProjectClassLoader extends ClassLoader {
 				if (entry.getPath().equals(JRClasspathContainer.ID))
 					continue;
 				IClasspathContainer cont = JavaCore.getClasspathContainer(entry.getPath(), javaProject);
-				resolveClasspathEntries(urls, root, cont.getClasspathEntries());
+				resolveClasspathEntries(urls, root, cont.getClasspathEntries(), javaProject);
 			}
 		}
 	}
@@ -364,7 +460,8 @@ public class JavaProjectClassLoader extends ClassLoader {
 	}
 
 	private static void covertPathToUrl(IProject project, Set<URL> paths, IPath path) {
-		if (path != null && project != null && path.removeFirstSegments(1) != null && project.findMember(path.removeFirstSegments(1)) != null) {
+		if (path != null && project != null && path.removeFirstSegments(1) != null
+				&& project.findMember(path.removeFirstSegments(1)) != null) {
 
 			URI uri = project.findMember(path.removeFirstSegments(1)).getRawLocationURI();
 
@@ -386,12 +483,47 @@ public class JavaProjectClassLoader extends ClassLoader {
 		}
 	}
 
-	private URLClassLoader curlLoader;
-
 	private synchronized ClassLoader getURLClassloader(URL[] urls) {
-		if (curlLoader == null)
-			curlLoader = URLClassLoader.newInstance(urls, getParent());
+		if (curlLoader != null) {
+			clean(curlLoader);
+			curlLoader = null;
+		}
+		curlLoader = URLClassLoader.newInstance(urls, getParent());
 		return curlLoader;
+	}
+
+	public static void clean(URLClassLoader cl) {
+		if (cl != null)
+			try {
+				cl.close();
+				Field f = URLClassLoader.class.getDeclaredField("ucp");
+				f.setAccessible(true);
+				Object cp = f.get(cl);
+				f = cp.getClass().getDeclaredField("loaders");
+				f.setAccessible(true);
+				Object loaders = f.get(cp);
+				if (loaders != null)
+					for (Object l : (java.util.Collection<?>) loaders) {
+						try {
+							f = l.getClass().getDeclaredField("jar");
+							f.setAccessible(true);
+							Object jar = f.get(l);
+							if (jar instanceof JarFile)
+								((JarFile) jar).close();
+						} catch (Throwable t) {
+						}
+					}
+				f = URLClassLoader.class.getDeclaredField("nativeLibraries");
+				f.setAccessible(true);
+				Vector<?> nl = (Vector<?>) f.get(cl);
+				if (nl != null)
+					for (Object lib : nl) {
+						Method finalize = lib.getClass().getDeclaredMethod("finalize", new Class[0]);
+						finalize.setAccessible(true);
+						finalize.invoke(lib, new Object[0]);
+					}
+			} catch (Throwable t) {
+			}
 	}
 
 }
